Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-2068

configure option "--without-ldiskfs" does not build.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.4.0
    • Lustre 2.4.0
    • None
    • Lustre Tree: 2.3.51-7-g1d7fa63
      OS: CHAOS 5 (RHEL 6.2)
    • 3
    • 4318

      I run into build issues with the "lvfs" directory and the "osd-ldiskfs" directory if I configure the tree using the "--without-ldiskfs" option.

            mdiep Minh Diep - TLC
            prakash Prakash Surya (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: