LU-2068 build: Disable obdfilter with osd-zfs

This change introduces a few different cleanup and build system
changes. Most notably, the obdfilter modules is now disabled and
the mkfs utilities does not call into ldiskfs helpers when ldiskfs
is disabled. Apart from that, the other changes are various minor
cleanup and dead code removal.

Signed-off-by: James Simmons <uja.ornl@gmail.com>
Signed-off-by: Prakash Surya <surya1@llnl.gov>
Signed-off-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Change-Id: Idcfda525e4b76269c2cf17c1b3232033b92fc8a8
Reviewed-on: http://review.whamcloud.com/4159
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>